# getimg

./: Cargo.toml  README.md
src/: cli.rs  client.rs  lib.rs  main.rs  request.rs  response.rs  utils.rs
tests/: client.rs
